@@ -218,7 +218,12 @@ void hashlist::enable_hashing_algorithms_from_hashdeep_file(class display *ocb,c
     for(std::vector<std::string>::iterator it = algs.begin(); it!=algs.end(); it++){
 	std::string name = *it;
 	lowercase(name);
-	if(name=="filename") continue;
+	if(name=="filename") 
+  {
+    // Special value to denote the filename
+    filename_column = num_columns;
+    continue;
+  }
 	hashid_t id = algorithm_t::get_hashid_for_name(name);
 	if(id==alg_unknown){
 	    if(ocb){
@@ -256,101 +261,121 @@ uint64_t hashlist::total_matched()
 }
 
 
-/**
- * Loads a file of known hashes.
- * First identifies the file type, then reads the file.
- */
+//
+// Loads a file of known hashes.
+// First identifies the file type, then reads the file.
+ //
 hashlist::loadstatus_t hashlist::load_hash_file(display *ocb,const std::string &fn)
 {
-    loadstatus_t status = loadstatus_ok;
-    hashfile_format type;
+  loadstatus_t status = loadstatus_ok;
+  hashfile_format type;
 
-    FILE *hl_handle = fopen(fn.c_str(),"rb");
-    if (NULL == hl_handle) {
-	if(ocb) ocb->error("%s: %s", fn.c_str(), strerror(errno));
-	return status_file_error;
-    }
+  FILE *hl_handle = fopen(fn.c_str(),"rb");
+  if (NULL == hl_handle)
+  {
+	   if (ocb) 
+        ocb->error("%s: %s", fn.c_str(), strerror(errno));
+	   return status_file_error;
+  }
   
-    type = identify_format(ocb,fn,hl_handle);
-    if (file_unknown == type)  {
-	if(ocb) ocb->error("%s: Unable to identify file format", fn.c_str());
-	fclose(hl_handle);
-	hl_handle = 0;
-	return status_unknown_filetype;
-    }
+  type = identify_format(ocb,fn,hl_handle);
+  if (file_unknown == type)
+  {
+	   if (ocb) 
+        ocb->error("%s: Unable to identify file format", fn.c_str());
+	   fclose(hl_handle);
+	   hl_handle = 0;
+	   return status_unknown_filetype;
+  }
 
-    int contains_bad_lines = FALSE;
-    int record_valid=0;
+  int contains_bad_lines = FALSE;
+  int record_valid=0;
 
-    // We start our counter at line number two for the two lines
-    // of header we've already read
-    uint64_t line_number = 2;
+  // We start our counter at line number two for the two lines
+  // of header we've already read
+  uint64_t line_number = 2;
 
-    /* Redo this to use std::string everywhere */
-    char line[MAX_STRING_LENGTH];	// holds the line we are reading
+  /* Redo this to use std::string everywhere */
+  char line[MAX_STRING_LENGTH];	// holds the line we are reading
 
-    while (fgets(line,MAX_STRING_LENGTH,hl_handle)) {
-	line_number++;			// count where we are
+  while (fgets(line,MAX_STRING_LENGTH,hl_handle)) 
+  {
+	   line_number++;			// count where we are
 
-	// Lines starting with a pound sign are comments and can be ignored
-	if ('#' == line[0]){
-	    continue;
-	}
+	   // Lines starting with a pound sign are comments and can be ignored
+	   if ('#' == line[0])
+     {
+	      continue;
+	   }
 
-	// C++ typically fails with a bad_alloc, but you can make it return null
-	// http://www.cplusplus.com/reference/std/new/bad_alloc/
-	// http://www.cplusplus.com/reference/std/new/nothrow/
-	file_data_t *t = new (std::nothrow) file_data_t(); // C++ new fails with a bad_a
-	if (NULL == t){
-	    ocb->fatal_error("%s: Out of memory in line %"PRIu64, 
-			fn.c_str(), line_number);
-	}
+	   // C++ typically fails with a bad_alloc, but you can make it return null
+	   // http://www.cplusplus.com/reference/std/new/bad_alloc/
+	   // http://www.cplusplus.com/reference/std/new/nothrow/
+	   file_data_t *t = new (std::nothrow) file_data_t(); // C++ new fails with a bad_a
+	   if (NULL == t)
+     {
+	      ocb->fatal_error("%s: Out of memory in line %"PRIu64, 
+			  fn.c_str(), line_number);
+	   }
 
-	chop_line(line);
-	record_valid = TRUE;
+	   chop_line(line);
+	   record_valid = TRUE;
 
-	// completely rewritten to use STL strings
-	std::vector<std::string> fields = split(std::string(line),',');
-	for(size_t column_number=0;column_number<fields.size();column_number++){
-	    // The first column should always be the file size
-	    std::string word = fields[column_number];
-	    if (column_number==0) {
-		t->file_bytes = (uint64_t)strtoll(word.c_str(),NULL,10);
-		continue;
-	    }
-	    if (column_number==fields.size()-1){
-		t->file_name = word;
-		continue;
-	    }
+	   // completely rewritten to use STL strings
+     std::string line_as_string(line);
+	   std::vector<std::string> fields = split(line_as_string,',');
+     size_t column_number;
+	   for (column_number=0 ; column_number<fields.size() ; column_number++)
+     {
+	      // The first column should always be the file size
+	      std::string word = fields[column_number];
+        if (column_number==0) 
+        {
+		      t->file_bytes = (uint64_t)strtoll(word.c_str(),NULL,10);
+		      continue;
+	      }
 
+	      if (column_number == filename_column)
+        {
+          // We need to 'find' everything in the string after this
+          // comma, starting with the "word".
+          size_t start = line_as_string.find(word);
+          t->file_name = line_as_string.substr(start,std::string::npos);
+          break;
+	      }
 
-	    // All other columns should contain a valid hash in hex
-	    if ( !algorithm_t::valid_hash(hash_column[column_number],word)){
-		if(ocb) ocb->error("%s: Invalid %s hash in line %"PRIu64,fn.c_str(), 
-					 hashes[hash_column[column_number]].name.c_str(),
-					 line_number);
-		contains_bad_lines = TRUE;
-		record_valid = FALSE;
-		// Break out (done = true) and then process the next line
-		break;
-	    }
+	       // All other columns should contain a valid hash in hex
+	       if ( !algorithm_t::valid_hash(hash_column[column_number],word))
+         {
+		         if (ocb) 
+                ocb->error("%s: Invalid %s hash in line %"PRIu64,fn.c_str(), 
+					   hashes[hash_column[column_number]].name.c_str(),
+					   line_number);
+		         contains_bad_lines = TRUE;
+		         record_valid = FALSE;
+		         // Break out (done = true) and then process the next line
+		         break;
+	       }
 
 	    // Convert the hash to a std::string and save it
 	    lowercase(word);
 	    t->hash_hex[hash_column[column_number]] = word;
-	}
-	if ( record_valid) {
-	    add_fdt(t);	/* add the file to the database*/
-	}
-    }
-    fclose(hl_handle);
-    hl_handle = 0;
+	   }
+	   if ( record_valid) 
+     {
+	      add_fdt(t);	/* add the file to the database*/
+	   }
+  }
 
-    if (contains_bad_lines){
-	return status_contains_bad_hashes;
-    }
+  fclose(hl_handle);
+  hl_handle = 0;
+
+  if (contains_bad_lines)
+  {
+	   return status_contains_bad_hashes;
+  }
     
-    return status;
+  return status;
 }
 
 
